@startuml
class library_Author {
  + birthdate : date
  + name : str
  + surname : str
}
class library_Book {
  + pages : int
  + title : str
}
class library_Library {
}
library_Author "0..9999" -- "1..1" library_Book : authors0
library_Author "0..9999" --* "1..1" library_Library : authors3
library_Book "0..9999" --* "1..1" library_Library : books1
@enduml